--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -71,7 +71,7 @@
             -->
 
 
-                <form id="questionform" action="point to a submit view" method="post">
+                <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="post">
                     {% for question in course.question_set.all %}
                         <div class="card mt-1">
                             <div class="card-header"><h5>{{ question.question_text}}</h5></div>
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                         {% endfor %}
-                    <input class="btn btn-success btn-block" type="submit" value="Submit">
+                    <input class="btn btn-success btn-block" type="submit" value="Submit" >
                 </form>
             </div>
             <!--Check here to see more details Bootstrap checkbox
